--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
             width: 100%;
             margin-top: auto;
         }
+
+        .color-change {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    animation: colorChange 0.5s infinite linear; /* Fast color change */
+}
     </style>
 </head>
 <body>
@@ -72,6 +79,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="disclaimer.html" class="color-change">Disclaimer</a></li>
                 <li><a href="subject.html">Subjects</a></li>
             </ul>
         </nav>
